--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="homeApp">
   <head>
     <title> Smart Home </title>
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body ng-controller="MainController">
     <header>
@@ -19,5 +20,6 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="./js/app.js" type="text/javascript"></script>
     <script src="./js/controllers.js" type="text/javascript"></script>
+    <script src="./js/services.js" type="text/javascript"></script>
   </body>
 </html>
