--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html ng-app="homeApp">
   <head>
     <title> Smart Home </title>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body ng-controller="MainController">
     <header>
-      <h1> Welcome to Smart Home </h1>
+      <nav>
+        <div class="brand">
+          <img class="logo" src="http://i.stack.imgur.com/yZlqh.png">
+          <h1>Smart Home</h1>
+        </div>
+        <ul>
+          <a href="#"><li>Link 1</li></a>
+          <a href="#"><li>Link 2</li></a>
+        </ul>
+      </nav>
     </header>
 
     <main ui-view>
