additional styling login and signup forms

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <header>
       <nav>
         <div class="brand">
-          <img class="logo" src="http://i.stack.imgur.com/yZlqh.png">
-          <h1>Smart Home</h1>
+          <a href="/#/home"><img class="logo" src="http://i.stack.imgur.com/yZlqh.png"></a>
+          <a href="/#/home"><h1>Smart Home</h1></a>
         </div>
-        <ul>
+        <!-- <ul>
           <a href="#"><li>Link 1</li></a>
           <a href="#"><li>Link 2</li></a>
-        </ul>
+        </ul> -->
       </nav>
     </header>
 
