--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,9 @@
     <header>
       <nav>
         <div class="brand">
-          <a href="/#/home"><img class="logo" src="http://i.stack.imgur.com/yZlqh.png"></a>
+          <a href="/#/home"><img class="logo" src="smarthome.png"></a>
           <a href="/#/home"><h1>Smart Home</h1></a>
         </div>
-        <!-- <ul>
-          <a href="#"><li>Link 1</li></a>
-          <a href="#"><li>Link 2</li></a>
-        </ul> -->
       </nav>
     </header>
 
