--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <header>
       <nav>
         <div class="brand">
-          <a href="/#/home"><img class="logo" src="smarthome.png"></a>
+          <a href="/#/home"><img class="logo" src="smarthome2.png"></a>
           <a href="/#/home"><h1>Smart Home</h1></a>
         </div>
       </nav>
