--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
      <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="./js/app.js" type="text/javascript"></script>
-    <script src="./js/controllers.js" type="text/javascript"></script>
-    <script src="./js/services.js" type="text/javascript"></script>
+    <script src="./js/mainController.js" type="text/javascript"></script>
+    <script src="./js/dashboardController.js" type="text/javascript"></script>
+    <script src="./js/signupService.js" type="text/javascript"></script>
+    <script src="./js/loginService.js" type="text/javascript"></script>
+    <script src="./js/weatherService.js" type="text/javascript"></script>
   </body>
 </html>
