troubleshooting views no longer showing

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <title> SmartHome </title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
+    <base href="/">
   </head>
-  <body ng-controller="MainController">
+  <body>
     <header>
       <nav>
         <div class="brand">
@@ -25,10 +26,10 @@
      <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="./js/app.js" type="text/javascript"></script>
-    <script src="./js/mainController.js" type="text/javascript"></script>
-    <script src="./js/dashboardController.js" type="text/javascript"></script>
     <script src="./js/signupService.js" type="text/javascript"></script>
     <script src="./js/loginService.js" type="text/javascript"></script>
     <script src="./js/weatherService.js" type="text/javascript"></script>
+    <script src="./js/mainController.js" type="text/javascript"></script>
+    <script src="./js/dashboardController.js" type="text/javascript"></script>
   </body>
 </html>
