--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
      <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
+    <script src="./js/services/signupService.js" type="text/javascript"></script>
+    <script src="./js/services/loginService.js" type="text/javascript"></script>
+    <script src="./js/services/weatherService.js" type="text/javascript"></script>
+    <script src="./js/controllers/MainController.js" type="text/javascript"></script>
+    <script src="./js/controllers/DashboardController.js" type="text/javascript"></script>
     <script src="./js/app.js" type="text/javascript"></script>
-    <script src="./js/signupService.js" type="text/javascript"></script>
-    <script src="./js/loginService.js" type="text/javascript"></script>
-    <script src="./js/weatherService.js" type="text/javascript"></script>
-    <script src="./js/mainController.js" type="text/javascript"></script>
-    <script src="./js/dashboardController.js" type="text/javascript"></script>
   </body>
 </html>
