--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,8 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="./js/app.js" type="text/javascript"></script>
     <script src="./js/controllers.js" type="text/javascript"></script>
+    <!-- <script src="./js/controllers/mainController.js" type="text/javascript"></script>
+    <script src="./js/controllers/DashboardController.js" type="text/javascript"></script> -->
     <script src="./js/services.js" type="text/javascript"></script>
   </body>
 </html>
