--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
   </head>
-  <body ng-controller="MainController">
+  <body>
     <header>
       <nav>
         <div class="brand">
@@ -26,8 +26,6 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.2.0/angularfire.min.js"></script>
     <script src="./js/app.js" type="text/javascript"></script>
     <script src="./js/controllers.js" type="text/javascript"></script>
-    <!-- <script src="./js/controllers/mainController.js" type="text/javascript"></script>
-    <script src="./js/controllers/DashboardController.js" type="text/javascript"></script> -->
     <script src="./js/services.js" type="text/javascript"></script>
   </body>
 </html>
