including icons and precipitation

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title> SmartHome </title>
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <base href="/">
   </head>
   <body>
